force-app/main/default/objects/CLH_Website_Lead_Mapping__c/CLH_Website_Lead_Mapping__c.object-meta.xml
<CustomObject>
    <description>Used to route Clean Harbors Leads that come in from the www.cleanharbors.com</description>
    <label>Website Lead Mapping - CLH</label>
    <nameField>
        <displayFormat>CLHW-{000000}</displayFormat>
        <label>CLH Website ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Lead Mapping - CLH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>