force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/CLH_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Address__c</fullName>
    <description>Clean harbors web address that&apos;s requesting a sales rep</description>
    <label>CLH Website Address</label>
    <type>Url</type>
</CustomField>