force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/CLH_Website_Lead_Recipient_1__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Lead_Recipient_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that should receive the lead</description>
    <label>CLH Website Lead Recipient 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CLH_Website_Lead_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>