force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/CLH_Website_Lead_Recipient_2__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Lead_Recipient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates secondary user that should receive lead notification</description>
    <label>CLH Website Lead Recipient 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CLH_Website_Lead_Mapping1</relationshipName>
    <type>Lookup</type>
</CustomField>