force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/CLH_Website_Send_Lead_to_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Send_Lead_to_Territory_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the owner of the territory for this primary business should be assigned the lead.</description>
    <label>CLH Website Send Lead to Territory Owner</label>
    <type>Checkbox</type>
</CustomField>