force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/CLH_Website_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>CLH_Website_Service_Request__c</fullName>
    <description>Value passed by CLH Website to the Lead object&apos;s CLH Website Service Requested field</description>
    <label>CLH Website Service Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>