force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/isActive_Recipient1__c.field-meta.xml
<CustomField>
    <fullName>isActive_Recipient1__c</fullName>
    <formula>CLH_Website_Lead_Recipient_1__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive Recipient1</label>
    <type>Checkbox</type>
</CustomField>