force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/isActive_Recipient2__c.field-meta.xml
<CustomField>
    <fullName>isActive_Recipient2__c</fullName>
    <formula>CLH_Website_Lead_Recipient_2__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive Recipient2</label>
    <type>Checkbox</type>
</CustomField>