force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>