force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/Recipient_Me__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Me__c</fullName>
    <formula>IF( or(CLH_Website_Lead_Recipient_1__c = $User.Id, CLH_Website_Lead_Recipient_2__c = $User.Id)  , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Me</label>
    <type>Checkbox</type>
</CustomField>