force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/SK_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>SK_Queue_Id__c</fullName>
    <label>SK Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>