force-app/main/default/objects/CLH_Website_Lead_Mapping__c/fields/Territory_exists_for_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Territory_exists_for_Primary_Business__c</fullName>
    <description>Indicates which businesses have territory coverage</description>
    <formula>or(
text(Primary_Business__c) = &apos;Technical Services&apos;
,text(Primary_Business__c) = &apos;Field Services&apos;
,text(Primary_Business__c) = &apos;Industrial Services&apos;
,text(Primary_Business__c) = &apos;Safety-Kleen&apos;
,text(Primary_Business__c) = &apos;Thermo Fluids&apos;
,text(Primary_Business__c) = &apos;Performance Plus Products&apos;
,text(Primary_Business__c) = &apos;Emerald Services&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory exists for Primary Business</label>
    <type>Checkbox</type>
</CustomField>