force-app/main/default/objects/CLH_Website_Lead_Mapping__c/listViews/Field_Services.listView-meta.xml
<ListView>
    <fullName>Field_Services</fullName>
    <columns>NAME</columns>
    <columns>CLH_Website_Service_Request__c</columns>
    <columns>Primary_Business__c</columns>
    <columns>CLH_Website_Send_Lead_to_Territory_Owner__c</columns>
    <columns>CLH_Website_Lead_Recipient_1__c</columns>
    <columns>isActive_Recipient1__c</columns>
    <columns>CLH_Website_Lead_Recipient_2__c</columns>
    <columns>isActive_Recipient2__c</columns>
    <columns>CLH_Website_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Field Services</value>
    </filters>
    <label>Field Services</label>
    <language>en_US</language>
</ListView>