force-app/main/default/objects/CLH_Website_Lead_Mapping__c/listViews/Inactive_Recipients.listView-meta.xml
<ListView>
    <fullName>Inactive_Recipients</fullName>
    <booleanFilter>1 or (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>CLH_Website_Service_Request__c</columns>
    <columns>Primary_Business__c</columns>
    <columns>CLH_Website_Send_Lead_to_Territory_Owner__c</columns>
    <columns>CLH_Website_Lead_Recipient_1__c</columns>
    <columns>isActive_Recipient1__c</columns>
    <columns>CLH_Website_Lead_Recipient_2__c</columns>
    <columns>isActive_Recipient2__c</columns>
    <columns>CLH_Website_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isActive_Recipient1__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CLH_Website_Lead_Recipient_2__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>isActive_Recipient2__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Recipients</label>
    <language>en_US</language>
</ListView>