force-app/main/default/objects/CLH_Website_Lead_Mapping__c/listViews/Technical_Services_insite.listView-meta.xml
<ListView>
    <fullName>Technical_Services_insite</fullName>
    <columns>NAME</columns>
    <columns>CLH_Website_Service_Request__c</columns>
    <columns>Primary_Business__c</columns>
    <columns>CLH_Website_Lead_Recipient_1__c</columns>
    <columns>CLH_Website_Send_Lead_to_Territory_Owner__c</columns>
    <columns>CLH_Website_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Business__c</field>
        <operation>equals</operation>
        <value>Technical Services</value>
    </filters>
    <filters>
        <field>CLH_Website_Service_Request__c</field>
        <operation>contains</operation>
        <value>onsite,insite</value>
    </filters>
    <label>Technical Services (insite)</label>
    <language>en_US</language>
</ListView>